...
                    android:textSize="@dimen/text_23"
                    android:textColor="@color/colorDarkLiver"
                    android:text="@string/lblCategoryCelulares"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerCategoryCelulares"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <ProgressBar
                    android:id="@+id/progressBarCategoryCelulares"
                    android:layout_width="wrap_content"
...
                    android:textSize="@dimen/text_23"
                    android:textColor="@color/colorDarkLiver"
                    android:text="@string/lblCategoryComputacion"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerCategoryComputacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <ProgressBar
                    android:id="@+id/progressBarCategoryComputacion"
...
                    android:textSize="@dimen/text_23"
                    android:textColor="@color/colorDarkLiver"
                    android:text="@string/lblCategoryDeportes"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerCategoryDeportes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <ProgressBar
                    android:id="@+id/progressBarCategoryDeportes"
...
