...
    <string name="lblConsejo1">- Desde Mercado Libre, Nunca te pediremos contraseñas, PIN o códigos de verificación a través de Whatsapp, telefono, SMS o email.</string>
    <string name="lblConsejo2">- No uses servicios de pago anónimos (por ej. Western Union), ni envíes dinero al exterior.</string>
    <string name="lblResultados">Resultados de la busqueda: </string>

    <!-- Photo Descriptions -->
    <string name="btnSearchDescription">Search Button</string>
    <string name="imgProductDescription">Product Photo</string>

    <!-- Log and Error Texts -->
    <string name="msg_network_error">Internet connection failed, please try again later</string>


    <!-- other texts -->
...
